added monitor parameter descriptions to intro page and added download link

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -239,6 +239,10 @@
         <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 text-center">
             <h1>Introducing Urim</h1>
             <p>A flexible and extensible dashboard application</p>
+            <div class="control-group">
+                <a class="btn btn-default btn-lg" href="https://github.com/wayz-of-chang/Urim" role="button"><i class="fa fa-download"></i> Download Urim</a>
+            </div>
+            <p>&nbsp;</p>
         </div>
         <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
     </div>
@@ -274,6 +278,7 @@
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
             <div class="page-header">
+                <a id="data_flow"></a>
                 <h1>Data Flow</h1>
             </div>
             <div class="col-xs-12 col-sm-12 hidden-md hidden-lg">
@@ -342,22 +347,26 @@
         <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
         <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8">
             <div class="page-header text-center">
-                <h1>Configuration</h1>
+                <h1>Monitor Settings</h1>
             </div>
-            <p>While there are many dashboard applications out there, this particular application aims to strike the perfect balance between customization and simplicity, by providing a solid data flow while exposing key parts of the application for customization.  The intention is that users will not be compelled to have to introduce hacks in order to extend needed functionality to this application, though should the user wish to do so, that is also possible.  To accomplish this goal, a few crucial handles are exposed: the name of a script to be run on the client, the chart type, and the output parser. This allows the user to specify the data (s)he wishes to monitor, set the chart type to appropriately render the information, and also to massage the data so that the chart type can process and render the results.</p>
-            <h3>Script</h3>
-            <p>The script should be placed in a <code>scripts</code> directory that is on the same level as the <code>.jar</code> file. Some examples are present when extracting the distribution <code>.zip</code> file. Currently, Windows <code>.bat</code> files and Linux/Mac OSX <code>.sh</code> files are supported. On Linux and/or Mac OSX systems, the executable permission may need to be set explicitly on the script file. What the output of the script is supposed to be is open-ended.  It is up to the user what (s)he wants to return from this script.  Whatever the output is, the client will return to the server, and the server will return to the browser.  It is then the output parser's job to parse the output and extract the information.</p>
-            <h3>Chart Type</h3>
-            <p>The chart type includes many various types, which are explained in more detail in the <a href="#chart_types">Chart Types</a> section. If none is specified, the raw JSON response will be printed.</p>
-            <h3>Output Parser</h3>
-            <p>This is an inline JS function that is evaluated every time the monitor response is available. What is returned here is the value used to update the chart. Thus, it is the job of this function to return something in a format that is valid to the chart type being used. Each chart type has a specific format, which is explained in more detail in the <a href="#chart_types">Chart Types</a> section. <b>Note: The maximum length of the output parser is 1023 characters long.</b> This number was chosen both as a sane number large enough for accomplishing the job of massaging the data to fit the inputs for the charts, and small enough to not negatively impact performance too much and to discourage potential security exploits (where custom JS is run, there is the potential it can cause harm to the user's system).</p>
+            <p>Each monitor is able to display stats from a system on a separate client.  The following are the details for each parameter that can be specified.</p>
+            <h3>Monitor Name</h3>
+            <p>The name of the monitor.  This field is displayed in the heading of the monitor, and serves to identify the monitor for the user.  It does not need to be unique; multiple monitors may have the same name, though that doesn't make much sense.</p>
+            <h3>URL</h3>
+            <p>The HTTP address of the client machine, as accessible by the server.  This may or may not be the same as the address as accessible by the user's web browser.  The HTTP address must be available to the server in order for the monitor to be able to retrieve the desired stats.</p>
+            <h3>Monitor Type</h3>
+            <p>The type of monitoring to perform.  Depending on the selection chosen, <code>System</code> or <code>Script</code>, this determines the other settings are available.</p>
+            <dl class="dl-horizontal">
+                <dt>System</dt>
+                <dd>This will monitor a system stat (<code>CPU</code>, <code>RAM</code>, or <code>Disk Space</code>) depending on the <code>System Stat</code> setting, and display the results as a <code>Gauge</code>.</dd>
+                <dt>Script</dt>
+                <dd>This will monitor any custom script specified by the <code>Script Name</code> setting, parse the output generated by the script with the specified <code>Output Parser</code> setting (a blob of javascript), and render the output of the Output Parser with the specified <code>Chart Type</code> setting (<code>Status</code>, <code>Gauge</code>, <code>Bar Chart</code>, <code>Pie Chart</code>, or <code>Line Chart</code> - see the <a href="#chart_types">Chart Types</a> section for more information).</dd>
+            </dl>
             <h3>Protocol</h3>
-            <p>There are two main data flows supported by this application - REST and MQ (Message Queue via RabbitMQ). When REST is selected, the server will periodically send REST webservice requests to clients. Clients will respond with JSON responses, which will then be sent to the browser. This is the simplest data flow. When MQ is selected, the server will periodically send REST webservice requests to clients to start the clients. Clients will then periodically send messages to the message queue, which the server will listen for. Once a message appears in the message queue, the server will consume it by parsing the message, and persisting it in MongoDB. Concurrently, the server will be returning responses found in MongoDB within the last 5 seconds (every 5 seconds) to the browser. With MQ, the data flow is significantly more complex, with quite a few extra moving pieces, as follows:</p>
-            <ul>
-                <li>Every time a client receives a start REST request to start the MQ, the client will send a maximum of 10 messages before stopping.</li>
-                <li>In order to keep the client running, the server sends periodic start REST requests every four messages, which will reset the client's remaining message count.</li>
-                <li>Messages older than 1 minute old are cleared from MongoDB.  Messages stored this way is meant to be a cache, as opposed to a permanent storage place.</li>
-            </ul>
+            <p>The way the data is sent back and forth in the application.  Two choices are supported: <code>REST</code> and <code>MQ</code>.  See the <a href="#data_flow">Data Flow</a> section for the differences between the two choices.</p>
+            <h3>Interval</h3>
+            <p>The time between updates.  Choices range from <code>5 seconds</code> to <code>1 day</code>.</p>
+            <p>More details concerning the <code>Script</code>, <code>Chart Type</code>, <code>Output Parser</code>, and <code>Protocol</code> can be found under the <a href="#configuration">Configuration</a> section.</p>
         </div>
         <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
     </div>
@@ -482,6 +491,30 @@
                     </ul>
                 </dd>
             </dl>
+        </div>
+        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
+    </div>
+    <div class="row">
+        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
+        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8">
+            <div class="page-header text-center">
+                <a id="configuration"></a>
+                <h1>Configuration</h1>
+            </div>
+            <p>While there are many dashboard applications out there, this particular application aims to strike the perfect balance between customization and simplicity, by providing a solid data flow while exposing key parts of the application for customization.  The intention is that users will not be compelled to have to introduce hacks in order to extend needed functionality to this application, though should the user wish to do so, that is also possible.  To accomplish this goal, a few crucial handles are exposed: the name of a script to be run on the client, the chart type, and the output parser. This allows the user to specify the data (s)he wishes to monitor, set the chart type to appropriately render the information, and also to massage the data so that the chart type can process and render the results.</p>
+            <h3>Script</h3>
+            <p>The script should be placed in a <code>scripts</code> directory that is on the same level as the <code>.jar</code> file. Some examples are present when extracting the distribution <code>.zip</code> file. Currently, Windows <code>.bat</code> files and Linux/Mac OSX <code>.sh</code> files are supported. On Linux and/or Mac OSX systems, the executable permission may need to be set explicitly on the script file. What the output of the script is supposed to be is open-ended.  It is up to the user what (s)he wants to return from this script.  Whatever the output is, the client will return to the server, and the server will return to the browser.  It is then the output parser's job to parse the output and extract the information.</p>
+            <h3>Chart Type</h3>
+            <p>The chart type includes many various types, which are explained in more detail in the <a href="#chart_types">Chart Types</a> section. If none is specified, the raw JSON response will be printed.</p>
+            <h3>Output Parser</h3>
+            <p>This is an inline JS function that is evaluated every time the monitor response is available. What is returned here is the value used to update the chart. Thus, it is the job of this function to return something in a format that is valid to the chart type being used. Each chart type has a specific format, which is explained in more detail in the <a href="#chart_types">Chart Types</a> section. <b>Note: The maximum length of the output parser is 1023 characters long.</b> This number was chosen both as a sane number large enough for accomplishing the job of massaging the data to fit the inputs for the charts, and small enough to not negatively impact performance too much and to discourage potential security exploits (where custom JS is run, there is the potential it can cause harm to the user's system).</p>
+            <h3>Protocol</h3>
+            <p>There are two main data flows supported by this application - REST and MQ (Message Queue via RabbitMQ). When REST is selected, the server will periodically send REST webservice requests to clients. Clients will respond with JSON responses, which will then be sent to the browser. This is the simplest data flow. When MQ is selected, the server will periodically send REST webservice requests to clients to start the clients. Clients will then periodically send messages to the message queue, which the server will listen for. Once a message appears in the message queue, the server will consume it by parsing the message, and persisting it in MongoDB. Concurrently, the server will be returning responses found in MongoDB within the last 5 seconds (every 5 seconds) to the browser. With MQ, the data flow is significantly more complex, with quite a few extra moving pieces, as follows:</p>
+            <ul>
+                <li>Every time a client receives a start REST request to start the MQ, the client will send a maximum of 10 messages before stopping.</li>
+                <li>In order to keep the client running, the server sends periodic start REST requests every four messages, which will reset the client's remaining message count.</li>
+                <li>Messages older than 1 minute old are cleared from MongoDB.  Messages stored this way is meant to be a cache, as opposed to a permanent storage place.</li>
+            </ul>
         </div>
         <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
     </div>
