--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -645,8 +645,12 @@
                         <div class="form-group clearfix btn-toolbar">
                             <button type="submit" class="btn btn-warning pull-right" ng-click="user.export()">Export Data</button>&nbsp;
                             <label class="btn btn-warning btn-file pull-right"><span>Import Data</span><input id="user_upload" type="file" name="file" data-url="/users/import" class="hidden" /></label>&nbsp;
-                            <a type="button" class="btn btn-primary pull-right" href="/swagger-ui.html">View Backend API</a>&nbsp;
+                        </div>
+                        <div class="form-group clearfix btn-toolbar">
                             <button type="button" class="btn btn-default pull-right" data-dismiss="modal" ng-click="user.close_settings_popup()">Close</button>
+                            <button type="button" class="btn btn-primary pull-right"
+                                   ng-click="user.change_theme('ANGULAR')">Use Angular Material Theme</button>&nbsp;
+                            <a type="button" class="btn btn-primary pull-right" href="/swagger-ui.html">View Backend API</a>&nbsp;
                         </div>
                     </form>
                 </div>
