--- a/src/main/resources/templates/index-ng.html
+++ b/src/main/resources/templates/index-ng.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="/build/urim-ng.min.css" />
     <script src="/build/urim-ng.min.js"></script>
+    <style>
+        [ng\:cloak], [ng-cloak], .ng-cloak {
+            display: none !important;
+        }
+    </style>
 </head>
 <body ng-app="dashboardApp" layout="column">
 <md-toolbar class="md-menu-toolbar ng-cloak">
@@ -89,6 +94,8 @@
         <md-button ng-controller="UserController as user" ng-show="user.logged_in"
                    ng-click="user.open_settings_popup()"><i class="fa fa-cog" aria-hidden="true" title="Settings"></i>
         </md-button>
+        <md-button ng-controller="UserController as user" ng-hide="user.logged_in"><a href="/bs"><i class="fa fa-paint-brush" aria-hidden="true" title="Switch to Bootstrap Theme"></i></a></md-button>
+        <md-button ng-controller="UserController as user" ng-show="user.logged_in"><a href="" ng-click="user.change_theme('BOOTSTRAP')"><i class="fa fa-paint-brush" aria-hidden="true" title="Switch to Bootstrap Theme"></i></a></md-button>
     </md-menu-bar>
 </md-toolbar>
 
@@ -218,121 +225,123 @@
 </md-content>
 
 <md-content class="ng-cloak" id="intro_content" ng-controller="DashboardController as dashboard"
-     ng-hide="dashboard.logged_in()" flex="" layout="column">
-    <div>
-        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
-        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 text-center">
-            <h1>Introducing Urim</h1>
+     ng-hide="dashboard.logged_in()" flex="" layout="column" layout-padding="">
+    <md-content layout="row">
+        <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
+        <div flex="" layout-align="center center">
+            <h1 class="md-display-2">Introducing Urim</h1>
             <p>A flexible and extensible dashboard application</p>
             <div class="control-group">
-                <a class="btn btn-default btn-lg" href="https://github.com/wayz-of-chang/Urim" role="button"><i class="fa fa-download"></i> Download Urim</a>
+                <md-button class="md-raised md-primary md-lg" href="https://github.com/wayz-of-chang/Urim" role="button"><i class="fa fa-download"></i> Download Urim</md-button>
             </div>
             <p>&nbsp;</p>
         </div>
-        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
-    </div>
-    <div class="bg-info">
-        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
-        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 text-center">
-            <div class="page-header">
-                <h1>Features</h1>
+        <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
+    </md-content>
+    <md-content class="bg-info" layout="row">
+        <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
+        <md-whiteframe flex="" layout="column" layout-align="center center">
+            <div>
+                <h1 class="md-display-1">Features</h1>
             </div>
-            <div class="list-group">
-                <div class="list-group-item">
-                    <a class="list-group-item-heading" role="button" data-toggle="collapse" href="" aria-expanded="false" aria-controls="features_open_source" data-target="#features_open_source">100% free and open-source</a>
-                    <div class="collapse list-group-item-text" id="features_open_source">
+            <md-list>
+                <md-list-item class="md-list-item-text" layout="column">
+                    <h3 role="button" data-toggle="collapse" href="" aria-expanded="false" aria-controls="features_open_source" data-target="#features_open_source">100% free and open-source</h3>
+                    <p class="collapse" id="features_open_source">
                         This application is licensed under the MIT License.  Third-party libraries used include: Spring Boot, jQuery, AngularJS, D3, StompJS, SockJS, Mocha, Chai, Bootstrap, and a modified Liquid Fill Gauge (by Curtis Bratton), all of which are also free and open-source.
-                    </div>
-                </div>
-                <div class="list-group-item">
-                    <a class="list-group-item-heading" role="button" data-toggle="collapse" href="" aria-expanded="false" aria-controls="features_customization" data-target="#features_customization">Multiple levels of customization</a>
-                    <div class="collapse list-group-item-text" id="features_customization">
+                    </p>
+                </md-list-item>
+                <md-list-item class="md-list-item-text" layout="column">
+                    <h3 role="button" data-toggle="collapse" href="" aria-expanded="false" aria-controls="features_customization" data-target="#features_customization">Multiple levels of customization</h3>
+                    <p class="collapse" id="features_customization">
                         Using the distributable Jar file, as-is, allows for specifying execution scripts, chart types, and output parsers - the moving pieces that need to be versatile.  Or, rolling your own by downloading the source code, making any desired customization, and compiling the application allows for any modification.  Just be warned that should you choose to go down this path, the author does not claim any responsibility for the consequences that result.
-                    </div>
-                </div>
-                <div class="list-group-item">
-                    <a class="list-group-item-heading" role="button" data-toggle="collapse" href="" aria-expanded="false" aria-controls="features_dataflow" data-target="#features_dataflow">Straightforward design</a>
-                    <div class="collapse list-group-item-text" id="features_dataflow">
+                    </p>
+                </md-list-item>
+                <md-list-item class="md-list-item-text" layout="column">
+                    <h3 role="button" data-toggle="collapse" href="" aria-expanded="false" aria-controls="features_dataflow" data-target="#features_dataflow">Straightforward design</h3>
+                    <p class="collapse" id="features_dataflow">
                         Both the data flow and architecture use very basic designs that make the application easy to use and understand.
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
-    </div>
-    <div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-            <div class="page-header">
+                    </p>
+                </md-list-item>
+            </md-list>
+        </md-whiteframe>
+        <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
+    </md-content>
+    <md-content>
+        <div flex="" layout="column">
+            <div layout="column" layout-align="center center">
                 <a id="data_flow"></a>
-                <h1>Data Flow</h1>
+                <h1 class="md-display-1">Data Flow</h1>
             </div>
-            <div class="col-xs-12 col-sm-12 hidden-md hidden-lg">
+            <div hide-md="" hide-lg="">
                 <form>
                     <div class="form-group">
-                        <select class="form-control" onchange="animateDataflow(this, $(this).val());return false;">
-                            <option value=""></option>
-                            <option value="rest">REST Client (Initialization)</option>
-                            <option value="mq">MQ Client (Initialization)</option>
-                            <option value="settings">Settings</option>
-                            <option value="p-rest">REST Client (Periodic Updates)</option>
-                            <option value="p-mq">MQ Client (Periodic Updates)</option>
-                        </select>
+                        <md-select class="form-control" onchange="animateDataflow(this, $(this).val());return false;" ng-model="dataflowSelect">
+                            <md-option value=""></md-option>
+                            <md-option value="rest">REST Client (Initialization)</md-option>
+                            <md-option value="mq">MQ Client (Initialization)</md-option>
+                            <md-option value="settings">Settings</md-option>
+                            <md-option value="p-rest">REST Client (Periodic Updates)</md-option>
+                            <md-option value="p-mq">MQ Client (Periodic Updates)</md-option>
+                        </md-select>
                     </div>
                 </form>
             </div>
-            <div class="col-xs-12 col-sm-12 hidden-md hidden-lg">
-                <div class="well dataflow-description">Select an option from the drop-down to see a step-by-step guide to how the data is passed through the application.</div>
+            <div hide-md="" hide-lg="">
+                <md-whiteframe class="md-whiteframe-2dp">Select an option from the drop-down to see a step-by-step guide to how the data is passed through the application.</md-whiteframe>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
-                <svg id="chart_dataflow" width="97%" class="chart"></svg>
-            </div>
-            <div class="hidden-xs hidden-sm col-md-4 col-lg-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">Initialization</div>
-                    <div class="list-group">
-                        <div class="list-group-item">
-                            <a class="list-group-item-heading" role="button" href="" onclick="animateDataflow(this, 'rest'); return false;">REST Client</a>
-                        </div>
-                        <div class="list-group-item">
-                            <a class="list-group-item-heading" role="button" href="" onclick="animateDataflow(this, 'mq'); return false;">MQ Client</a>
-                        </div>
-                        <div class="list-group-item">
-                            <a class="list-group-item-heading" role="button" href="" onclick="animateDataflow(this, 'settings'); return false;">Settings</a>
-                        </div>
-                    </div>
+            <div layout="row">
+                <div flex-xs="" flex-sm="" flex-md="60" flex-lg="80" layout-padding="">
+                    <svg id="chart_dataflow" width="97%" class="chart"></svg>
                 </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">Periodic Updates</div>
-                    <div class="list-group">
-                        <div class="list-group-item">
-                            <a class="list-group-item-heading" role="button" href="" onclick="animateDataflow(this, 'p-rest'); return false;">REST Client</a>
-                        </div>
-                        <div class="list-group-item">
-                            <a class="list-group-item-heading" role="button" href="" onclick="animateDataflow(this, 'p-mq'); return false;">MQ Client</a>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <div class="well dataflow-description">Select an option from the drop-down to see a step-by-step guide to how the data is passed through the application.</div>
+                <div hide-xs="" hide-sm="" flex-md="40" flex-lg="20" layout="column">
+                    <md-whiteframe class="md-whiteframe-1dp">
+                        <md-toolbar class="md-toolbar-tools">Initialization</md-toolbar>
+                        <md-list>
+                            <md-list-item class="md-list-item-text">
+                                <a class="list-group-item-heading" role="button" href="" onclick="animateDataflow(this, 'rest'); return false;">REST Client</a>
+                            </md-list-item>
+                            <md-list-item class="md-list-item-text">
+                                <a class="list-group-item-heading" role="button" href="" onclick="animateDataflow(this, 'mq'); return false;">MQ Client</a>
+                            </md-list-item>
+                            <md-list-item class="md-list-item-text">
+                                <a class="list-group-item-heading" role="button" href="" onclick="animateDataflow(this, 'settings'); return false;">Settings</a>
+                            </md-list-item>
+                        </md-list>
+                    </md-whiteframe>
+                    <md-whiteframe class="md-whiteframe-1dp">
+                        <md-toolbar class="md-toolbar-tools">Periodic Updates</md-toolbar>
+                        <md-list>
+                            <md-list-item class="md-list-item-text">
+                                <a class="list-group-item-heading" role="button" href="" onclick="animateDataflow(this, 'p-rest'); return false;">REST Client</a>
+                            </md-list-item>
+                            <md-list-item class="md-list-item-text">
+                                <a class="list-group-item-heading" role="button" href="" onclick="animateDataflow(this, 'p-mq'); return false;">MQ Client</a>
+                            </md-list-item>
+                        </md-list>
+                    </md-whiteframe>
+                    <md-whiteframe class="md-whiteframe-2dp">
+                        <div class="dataflow-description" layout-padding="">Select an option from the drop-down to see a step-by-step guide to how the data is passed through the application.</div>
+                    </md-whiteframe>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="bg-info">
-        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
-        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 text-center">
-            <div class="page-header">
-                <h1>Data Model</h1>
+    </md-content>
+    <md-content class="bg-info" layout="row">
+        <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
+        <div flex="" layout="column">
+            <div layout="column" layout-align="center center">
+                <h1 class="md-display-1">Data Model</h1>
             </div>
-            <svg id="chart_datastructure" width="97%" class="chart"></svg>
+            <svg id="chart_datastructure" flex="" class="chart"></svg>
         </div>
-        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
-    </div>
-    <div>
-        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
-        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8">
-            <div class="page-header text-center">
-                <h1>Monitor Settings</h1>
+        <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
+    </md-content>
+    <md-content>
+        <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
+        <div flex="">
+            <div layout="row" layout-align="center center">
+                <h1 class="md-display-1">Monitor Settings</h1>
             </div>
             <p>Each monitor is able to display stats from a system on a separate client.  The following are the details for each parameter that can be specified.</p>
             <h3>Monitor Name</h3>
@@ -353,22 +362,22 @@
             <p>The time between updates.  Choices range from <code>5 seconds</code> to <code>1 day</code>.</p>
             <p>More details concerning the <code>Script</code>, <code>Chart Type</code>, <code>Output Parser</code>, and <code>Protocol</code> can be found under the <a href="#configuration">Configuration</a> section.</p>
         </div>
-        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
-    </div>
-    <div class="bg-info">
-        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
-        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8">
-            <div class="page-header text-center">
+        <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
+    </md-content>
+    <md-content class="bg-info" layout="row">
+        <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
+        <div flex="">
+            <div layout="column" layout-align="center center">
                 <a id="chart_types"></a>
-                <h1>Chart Types</h1>
+                <h1 class="md-display-1">Chart Types</h1>
             </div>
             <p>This application comes with a number of charts which hopefully covers all the common cases of intuitively displaying monitor statuses.</p>
             <h3>Status Indicator</h3>
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6 monitor">
+            <div flex="" layout-xs="column" layout-sm="column" layout-md="row" layout-lg="row">
+                <div flex-xs="" flex-sm="" flex-md="60" flex-lg="80" class="monitor">
                     <svg id="chart_example_status" width="97%" height="97%" class="chart" onclick="return false;"></svg>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-6"><pre id="raw_example_status"></pre></div>
+                <div flex-xs="" flex-sm="" flex-md="" flex-lg=""><pre id="raw_example_status"></pre></div>
             </div>
             <dl class="dl-horizontal">
                 <dt>Purpose</dt>
@@ -385,11 +394,11 @@
                 </dd>
             </dl>
             <h3>Gauge</h3>
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6 monitor">
+            <div flex="" layout-xs="column" layout-sm="column" layout-md="row" layout-lg="row">
+                <div flex-xs="" flex-sm="" flex-md="60" flex-lg="80" class="monitor">
                     <svg id="chart_example_gauge" width="97%" height="97%" class="chart" onclick="return false;"></svg>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-6"><pre id="raw_example_gauge"></pre></div>
+                <div flex-xs="" flex-sm="" flex-md="" flex-lg=""><pre id="raw_example_gauge"></pre></div>
             </div>
             <dl class="dl-horizontal">
                 <dt>Purpose</dt>
@@ -478,11 +487,11 @@
                 </dd>
             </dl>
         </div>
-        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
-    </div>
-    <div>
-        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
-        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8">
+        <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
+    </md-content>
+    <md-content>
+        <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
+        <div flex="">
             <div class="page-header text-center">
                 <a id="configuration"></a>
                 <h1>Configuration</h1>
@@ -502,8 +511,8 @@
                 <li>Messages older than 1 minute old are cleared from MongoDB.  Messages stored this way is meant to be a cache, as opposed to a permanent storage place.</li>
             </ul>
         </div>
-        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
-    </div>
+        <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
+    </md-content>
 </md-content>
 
 <div id="dashboard_modals_container" ng-controller="DashboardController as dashboard" class="modals_container">
