--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="/build/urim.min.css" />
     <script src="/build/urim.min.js"></script>
+    <style>
+        [ng\:cloak], [ng-cloak], .ng-cloak {
+            display: none !important;
+        }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top ng-cloak">
@@ -87,6 +92,8 @@
                     </ul>
                 </li>
                 <li ng-show="user.logged_in"><a href="" ng-click="user.open_settings_popup()"><i class="fa fa-cog" aria-hidden="true" title="Settings"></i></a></li>
+                <li ng-hide="user.logged_in"><a href="/ng"><i class="fa fa-paint-brush" aria-hidden="true" title="Switch to Angular Material Theme"></i></a></li>
+                <li ng-show="user.logged_in"><a href="" ng-click="user.change_theme('ANGULAR')"><i class="fa fa-paint-brush" aria-hidden="true" title="Switch to Angular Material Theme"></i></a></li>
             </ul>
         </div>
     </div>
