--- a/src/main/resources/templates/index-ng.html
+++ b/src/main/resources/templates/index-ng.html
@@ -240,34 +240,34 @@
     </md-content>
     <md-content class="bg-info" layout="row">
         <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
-        <md-whiteframe flex="" layout="column" layout-align="center center">
+        <div flex="" layout="column" layout-align="center center">
             <div>
                 <h1 class="md-display-1">Features</h1>
             </div>
-            <md-list>
-                <md-list-item class="md-list-item-text" layout="column">
-                    <h3 role="button" data-toggle="collapse" href="" aria-expanded="false" aria-controls="features_open_source" data-target="#features_open_source">100% free and open-source</h3>
-                    <p class="collapse" id="features_open_source">
+            <md-content layout="row">
+                <md-card flex="33" layout-align="start center">
+                    <md-card-title><md-card-title-text><span class="md-headline">100% free and open-source</span></md-card-title-text></md-card-title>
+                    <md-card-content flex="">
                         This application is licensed under the MIT License.  Third-party libraries used include: Spring Boot, jQuery, AngularJS, D3, StompJS, SockJS, Mocha, Chai, Bootstrap, and a modified Liquid Fill Gauge (by Curtis Bratton), all of which are also free and open-source.
-                    </p>
-                </md-list-item>
-                <md-list-item class="md-list-item-text" layout="column">
-                    <h3 role="button" data-toggle="collapse" href="" aria-expanded="false" aria-controls="features_customization" data-target="#features_customization">Multiple levels of customization</h3>
-                    <p class="collapse" id="features_customization">
+                    </md-card-content>
+                </md-card>
+                <md-card flex="33" layout-align="start center">
+                    <md-card-title><md-card-title-text><span class="md-headline">Multiple levels of customization</span></md-card-title-text></md-card-title>
+                    <md-card-content flex="">
                         Using the distributable Jar file, as-is, allows for specifying execution scripts, chart types, and output parsers - the moving pieces that need to be versatile.  Or, rolling your own by downloading the source code, making any desired customization, and compiling the application allows for any modification.  Just be warned that should you choose to go down this path, the author does not claim any responsibility for the consequences that result.
-                    </p>
-                </md-list-item>
-                <md-list-item class="md-list-item-text" layout="column">
-                    <h3 role="button" data-toggle="collapse" href="" aria-expanded="false" aria-controls="features_dataflow" data-target="#features_dataflow">Straightforward design</h3>
-                    <p class="collapse" id="features_dataflow">
+                    </md-card-content>
+                </md-card>
+                <md-card flex="33" layout-align="start center">
+                    <md-card-title><md-card-title-text><span class="md-headline">Straightforward design</span></md-card-title-text></md-card-title>
+                    <md-card-content flex="">
                         Both the data flow and architecture use very basic designs that make the application easy to use and understand.
-                    </p>
-                </md-list-item>
-            </md-list>
-        </md-whiteframe>
+                    </md-card-content>
+                </md-card>
+            </md-content>
+        </div>
         <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
     </md-content>
-    <md-content>
+    <md-content layout="row">
         <div flex="" layout="column">
             <div layout="column" layout-align="center center">
                 <a id="data_flow"></a>
@@ -337,10 +337,10 @@
         </div>
         <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
     </md-content>
-    <md-content>
+    <md-content layout="row">
         <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
-        <div flex="">
-            <div layout="row" layout-align="center center">
+        <div>
+            <div layout="column" layout-align="center center">
                 <h1 class="md-display-1">Monitor Settings</h1>
             </div>
             <p>Each monitor is able to display stats from a system on a separate client.  The following are the details for each parameter that can be specified.</p>
@@ -373,11 +373,11 @@
             </div>
             <p>This application comes with a number of charts which hopefully covers all the common cases of intuitively displaying monitor statuses.</p>
             <h3>Status Indicator</h3>
-            <div flex="" layout-xs="column" layout-sm="column" layout-md="row" layout-lg="row">
-                <div flex-xs="" flex-sm="" flex-md="60" flex-lg="80" class="monitor">
+            <div layout-xs="column" layout-sm="column" layout-md="row" layout-lg="row">
+                <div flex-md="60" flex-lg="80" class="monitor">
                     <svg id="chart_example_status" width="97%" height="97%" class="chart" onclick="return false;"></svg>
                 </div>
-                <div flex-xs="" flex-sm="" flex-md="" flex-lg=""><pre id="raw_example_status"></pre></div>
+                <div flex-md="" flex-lg=""><pre id="raw_example_status"></pre></div>
             </div>
             <dl class="dl-horizontal">
                 <dt>Purpose</dt>
@@ -394,11 +394,11 @@
                 </dd>
             </dl>
             <h3>Gauge</h3>
-            <div flex="" layout-xs="column" layout-sm="column" layout-md="row" layout-lg="row">
-                <div flex-xs="" flex-sm="" flex-md="60" flex-lg="80" class="monitor">
+            <div layout-xs="column" layout-sm="column" layout-md="row" layout-lg="row">
+                <div flex-md="60" flex-lg="80" class="monitor">
                     <svg id="chart_example_gauge" width="97%" height="97%" class="chart" onclick="return false;"></svg>
                 </div>
-                <div flex-xs="" flex-sm="" flex-md="" flex-lg=""><pre id="raw_example_gauge"></pre></div>
+                <div flex-md="" flex-lg=""><pre id="raw_example_gauge"></pre></div>
             </div>
             <dl class="dl-horizontal">
                 <dt>Purpose</dt>
@@ -417,11 +417,11 @@
                 </dd>
             </dl>
             <h3>Bar Chart</h3>
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6 monitor">
+            <div layout-xs="column" layout-sm="column" layout-md="row" layout-lg="row">
+                <div flex-md="60" flex-lg="80" class="monitor">
                     <svg id="chart_example_bar" width="97%" height="97%" class="chart" onclick="return false;"></svg>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-6"><pre id="raw_example_bar"></pre></div>
+                <div flex-md="" flex-lg=""><pre id="raw_example_bar"></pre></div>
             </div>
             <dl class="dl-horizontal">
                 <dt>Purpose</dt>
@@ -445,11 +445,11 @@
                 </dd>
             </dl>
             <h3>Pie Chart</h3>
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6 monitor">
+            <div layout-xs="column" layout-sm="column" layout-md="row" layout-lg="row">
+                <div flex-md="60" flex-lg="80" class="monitor">
                     <svg id="chart_example_pie" width="97%" height="97%" class="chart" onclick="return false;"></svg>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-6"><pre id="raw_example_pie"></pre></div>
+                <div flex-md="" flex-lg=""><pre id="raw_example_pie"></pre></div>
             </div>
             <dl class="dl-horizontal">
                 <dt>Purpose</dt>
@@ -466,11 +466,11 @@
                 </dd>
             </dl>
             <h3>Line Chart</h3>
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6 monitor">
+            <div layout-xs="column" layout-sm="column" layout-md="row" layout-lg="row">
+                <div flex-md="60" flex-lg="80" class="monitor">
                     <svg id="chart_example_line" width="97%" height="97%" class="chart" onclick="return false;"></svg>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-6"><pre id="raw_example_line"></pre></div>
+                <div flex-md="" flex-lg=""><pre id="raw_example_line"></pre></div>
             </div>
             <dl class="dl-horizontal">
                 <dt>Purpose</dt>
@@ -489,12 +489,12 @@
         </div>
         <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
     </md-content>
-    <md-content>
+    <md-content layout="row">
         <div hide-xs="" hide-sm="" flex-md="10" flex-lg="20"></div>
-        <div flex="">
-            <div class="page-header text-center">
+        <div>
+            <div layout="column" layout-align="center center">
                 <a id="configuration"></a>
-                <h1>Configuration</h1>
+                <h1 class="md-display-1">Configuration</h1>
             </div>
             <p>While there are many dashboard applications out there, this particular application aims to strike the perfect balance between customization and simplicity, by providing a solid data flow while exposing key parts of the application for customization.  The intention is that users will not be compelled to have to introduce hacks in order to extend needed functionality to this application, though should the user wish to do so, that is also possible.  To accomplish this goal, a few crucial handles are exposed: the name of a script to be run on the client, the chart type, and the output parser. This allows the user to specify the data (s)he wishes to monitor, set the chart type to appropriately render the information, and also to massage the data so that the chart type can process and render the results.</p>
             <h3>Script</h3>
